# desktop-lyric

./: Makefile  README.md  meson.build  update-and-install.sh
cli/: gen-icon.js  gen-icons.js  install.sh  update-and-install.sh
desktop-lyric@tuberry/: extension.js  fields.js  lyric.js  metadata.json  mpris.js  paper.js  prefs.js  ui.js
desktop-lyric@tuberry/locale/: desktop-lyric.pot
desktop-lyric@tuberry/locale/nl/LC_MESSAGES/: gnome-shell-extension-desktop-lyric.po
desktop-lyric@tuberry/locale/zh_CN/LC_MESSAGES/: desktop-lyric.po  gnome-shell-extension-desktop-lyric.po
desktop-lyric@tuberry/schemas/: org.gnome.shell.extensions.desktop-lyric.gschema.xml
po/: POTFILES.in  nl.po  zh_CN.po
res/data/: extension.gresource.xml.in  meson.build  mpris.xml
res/data/scalable/status/: meson.build
res/icon/: meson.build
res/icons/: meson.build
res/schema/: schemas.gschema.xml  schemas.gschema.xml.in
res/schemas/: org.gnome.shell.extensions.desktop-lyric.gschema.xml
src/: const.js  extension.js  fields.js  lyric.js  menu.js  mpris.js  paper.js  player-menu.js  player-scanner.js  player-selector.js  player-utils.js  prefs.js  ui.js  util.js
src/player/: menu.js  scanner.js  selector.js  utils.js
